Fixes `panel__content` layout bug on small screens
Removes declarations for vertical centering on small screens and defers
to document flow.

--- a/_sass/modules/_panel.scss
+++ b/_sass/modules/_panel.scss
@@ -38,8 +38,16 @@
 }
 
 @media only screen and (max-width: 30em) {
+
   .panel {
     min-height: 50vh;
-    padding: 2.8rem 0 4.2rem;
+    padding: 4.2rem 0;
   }
+
+  .panel__content {
+    position: static;
+    top: 0;
+    transform: none;
+  }
+
 }
